[web2]: improving endpoints and fixing mutations endpoints
