# munayfund-api2/docs/swagger.json
@@ -15,7 +15,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8085",
+    "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
         "/login": {
@@ -183,8 +183,7 @@
                         "type": "file",
                         "description": "Archivos multimedia (imágenes y videos)",
                         "name": "media",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -342,6 +341,59 @@
                 }
             }
         },
+        "/projects/search": {
+            "get": {
+                "description": "Obtiene la lista de proyectos cuyos nombres son similares al proporcionado.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "projects"
+                ],
+                "summary": "Obtener proyectos por nombre similar",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Nombre parcial del proyecto a buscar",
+                        "name": "partialName",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Lista de proyectos",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/munayfund-api2_internal_core_domain.Project"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/projects/{id}": {
             "get": {
                 "description": "Obtiene los detalles de un proyecto específico.",
@@ -367,6 +419,75 @@
                 "responses": {
                     "200": {
                         "description": "Detalles del proyecto",
+                        "schema": {
+                            "$ref": "#/definitions/munayfund-api2_internal_core_domain.Project"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Actualiza un proyecto existente con la información proporcionada.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "projects"
+                ],
+                "summary": "Actualizar proyecto",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "ID del proyecto a actualizar",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Datos del proyecto a actualizar",
+                        "name": "project",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/munayfund-api2_internal_core_domain.Project"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Proyecto actualizado exitosamente",
                         "schema": {
                             "$ref": "#/definitions/munayfund-api2_internal_core_domain.Project"
                         }
@@ -534,59 +655,6 @@
                 }
             }
         },
-        "/search": {
-            "get": {
-                "description": "Obtiene la lista de proyectos cuyos nombres son similares al proporcionado.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "projects"
-                ],
-                "summary": "Obtener proyectos por nombre similar",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Nombre parcial del proyecto a buscar",
-                        "name": "partialName",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Lista de proyectos",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/munayfund-api2_internal_core_domain.Project"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
-                        }
-                    }
-                }
-            }
-        },
         "/signup": {
             "post": {
                 "description": "Este endpoint permite a un usuario registrarse proporcionando la información requerida, incluyendo email y contraseña.",
@@ -608,7 +676,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/munayfund-api2_internal_core_domain.User"
+                            "$ref": "#/definitions/munayfund-api2_internal_core_domain.SignUpInput"
                         }
                     }
                 ],
@@ -769,77 +837,6 @@
                     }
                 }
             }
-        },
-        "/{id}": {
-            "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Actualiza un proyecto existente con la información proporcionada.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "projects"
-                ],
-                "summary": "Actualizar proyecto",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "ID del proyecto a actualizar",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Datos del proyecto a actualizar",
-                        "name": "project",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/munayfund-api2_internal_core_domain.Project"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Proyecto actualizado exitosamente",
-                        "schema": {
-                            "$ref": "#/definitions/munayfund-api2_internal_core_domain.Project"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -925,6 +922,23 @@
                     "items": {
                         "$ref": "#/definitions/munayfund-api2_internal_core_domain.Multimedia"
                     }
+                }
+            }
+        },
+        "munayfund-api2_internal_core_domain.SignUpInput": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                },
+                "wallet_id": {
+                    "type": "string"
                 }
             }
         },
